# vibe-sastra-collab

./: .gitignore  README.md  WRAPPING_CODE_IN_DOCKER.md  ai-server.md  aidocker.md  apply-patches.sh  changes-sourcecode.md  docker-compose.yml  update-and-rebuild.sh  updating-from-source.md  vibe-ai-source-changes.md
docs/docs/cli/: intro.md
frontend/: .gitignore  Dockerfile  nginx.conf  vite.config.ts
gcs-data/vibe-aiserver-data/audio/: 6a1fe7eba4e3b8fe5117fea1_7ad88619_audio.wav.metadata  6a1fe7eba4e3b8fe5117fea1_7ad88619_audio.wav.metadata.metadata  6a1fe7eba4e3b8fe5117fea1_7ad88619_audio.wav.metadata.metadata.metadata  6a1ff3365715fa552cb1f027_7d3e571e_audio.wav.metadata  6a1ff3365715fa552cb1f027_7d3e571e_audio.wav.metadata.metadata  6a1ff5545715fa552cb1f029_50c5d85b_audio.wav.metadata  6a1ff5545715fa552cb1f029_50c5d85b_audio.wav.metadata.metadata  6a1ffa445715fa552cb1f02b_ca3609c8_audio.wav.metadata  6a1ffa445715fa552cb1f02b_ca3609c8_audio.wav.metadata.metadata  6a200a865715fa552cb1f02d_1cc45b26_audio.wav.metadata  6a200a865715fa552cb1f02d_1cc45b26_audio.wav.metadata.metadata
gcs-data/vibe-aiserver-data/questions/: 6a1ff5545715fa552cb1f029_573c92fd_questions.json.metadata  6a1ff5545715fa552cb1f029_573c92fd_questions.json.metadata.metadata  6a1ff5545715fa552cb1f029_81d76690_questions.json.metadata  6a1ff5545715fa552cb1f029_81d76690_questions.json.metadata.metadata  6a1ffa445715fa552cb1f02b_d4002cc3_questions.json.metadata  6a1ffa445715fa552cb1f02b_d4002cc3_questions.json.metadata.metadata
gcs-data/vibe-aiserver-data/transcripts/: 6a1ff5545715fa552cb1f029_ebf9980c_transcript.json.metadata  6a1ff5545715fa552cb1f029_ebf9980c_transcript.json.metadata.metadata  6a1ffa445715fa552cb1f02b_1769d9d6_transcript.json.metadata  6a1ffa445715fa552cb1f02b_1769d9d6_transcript.json.metadata.metadata  6a200a865715fa552cb1f02d_f34d6066_transcript.json  (+2 more)
minio-data/.minio.sys/: format.json
patches/vibe-ai/: ai.py  routes.py
self-hosting/: DEPLOYMENT_GUIDE.md  DGX-SERVER-DEPLOYMENT.md  backend.env.example  frontend.env.example  index.html  litellm_config.yaml.example  setup-dgx.md
vibe-ai/: .env.example  Dockerfile  pyproject.toml  requirements.txt
vibe-ai/src/: main.py  models.py  schema.py
vibe-ai/src/middleware/: error_logging.py
vibe-ai/src/services/: audio.py  segmentation.py  transcription.py
(+8 files in other folders)
