[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-server"
version = "1.0.0"
description = "FastAPI-based AI processing server with webhook integration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Agam"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/AgamW017/ai-server"
Repository = "https://github.com/AgamW017/ai-server"
Documentation = "https://github.com/AgamW017/ai-server#readme"
Issues = "https://github.com/AgamW017/ai-server/issues"

[project.scripts]
ai-server = "main:app"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["main", "models", "auth", "job_routes", "webhook_routes"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/"]
